# production

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  conf.py  pyproject.toml
.github/workflows/: docs.yml
_static/: custom.css
_templates/: language_switcher.html
locales/zh_CN/LC_MESSAGES/growing-contributors/: community-manager-self-care.po
nav/: index.md
nav/attracting-users/: index.md
nav/getting-started/: index.md
nav/growing-contributors/: index.md
nav/guiding-participants/: index.md
nav/measuring-success/: index.md
tools/: prepare-source.sh
tools/i18n/: catalog_status.py  normalize_po_files.py
