[project]
name = "guidebook-production"
version = "0.1.0"
description = "Production toolchain for building and translating The Open Source Way guidebook."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "babel>=2.18.0",
    "myst-parser>=4.0.1",
    "sphinx>=8.2.3,<9.0.0",
    "sphinx-book-theme>=1.1.4,<2.0.0",
    "sphinx-intl>=2.3.2",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = []
